# meshynet

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  index.html  package-lock.json  package.json
docs/: design-tokens.md  landing-reference.html  refactor-notes.md
src/: App.css  App.tsx  IndexView.tsx  MasterFeedView.tsx  index.css  main.tsx  pravidla.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  scraper.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  main.rs  og_metadata.rs
src/components/: Avatar.tsx  CancelBanner.tsx  FilterPanel.tsx  LoginModal.tsx  PostCard.tsx  SettingsModal.tsx  StatusBar.tsx  UpgradeModal.tsx  UserMenu.tsx  icons.tsx
src/hooks/: useBilling.ts  useSources.ts
src/lib/: billing.ts  device.ts  format.ts  i18n.ts  post-filters.ts  scraping.ts  storage.ts  supabase.ts  tauri.ts  theme-context.tsx  theme.ts  youtube.ts
src/locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  ga.json  hr.json  hu.json  it.json  lt.json  lv.json  mt.json  nl.json  pl.json  pt.json  ro.json  sk.json  sl.json  sv.json
src/types/: index.ts
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/: .env.example
supabase/functions/create-checkout-session/: index.ts
supabase/functions/create-portal-session/: index.ts
supabase/migrations/: 20260517000000_tier_pivot.sql  20260528120000_create_user_sources.sql  20260529120000_create_user_profiles_trigger.sql  20260602150000_fix_user_sources_rls_alias.sql
(+3 files in other folders)
